refactor: added new functionality and divided code by packages
